--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "build",
+    "site": "ngrsf",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
