--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "antd": "^5.22.3",
     "firebase": "^11.1.0",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
